--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "scripts": {
-    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
-    "postinstall": "cd ./chat/chat-app && yarn"
-  },
   "dependencies": {
     "browser-sync": "^2.18.13",
     "express": "^4.17.1",
     "gulp": "^3.9.1",
     "gulp-chug": "^0.5.1",
     "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-html-extract": "^0.3.0",
     "gulp-htmlmin": "^4.0.0",
-    "gulp-inject-string": "^1.1.2",
+    "gulp-inject-string": "^1.1.1",
     "gulp-minify-inline": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-run-sequence": "^0.3.2",
+    "gulp-sass": "^4.0.1",
+    "gulp-tap": "^1.0.1",
     "gulp-watch": "^5.0.0",
+    "js-beautify": "^1.7.5",
     "opn": "^5.3.0",
     "yargs": "^11.0.0"
   },
